# kindle-dashboard

./: .gitignore  app.py  dashboard.sh  generate_icons.py  main.py  octopus_power.py  pyproject.toml  runner.sh
