[project]
name = "kindle-dashboard"
version = "0.1.0"
description = "Kindle e-ink dashboard server for weather and Octopus Agile energy pricing."
requires-python = ">=3.10"
dependencies = [
    "Flask>=2.0,<3.0",
    "matplotlib>=3.10.9",
    "requests>=2.0,<3.0",
    "Pillow",
    "matplotlib>=3.0,<4.0",
    "icecream>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
